# spidev-lib

./: CMakeLists.txt  README.md
